# magvar

./: MANIFEST.in  README.md  av_geo.h  av_mag.c  av_mag.h  compile-cof  index.html  julian.py  magvarmodule.c  pyproject.toml  setup.py  wmm.c  wmm.mk
css/: style.css
test/: Makefile  test_magvar.c  test_values.py  test_wmm2020_test_values.py
